appId: com.pagerviewexample
# tc8 The [Prev] button decrements pages and stays on page one
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Basic Example'
- assertVisible: 'Basic Example'
- tapOn: 'Last'
- assertVisible:
    id: "pageNumber9"
- assertVisible: 'Page 10 / 10 '
- assertVisible: 'Prev'
- tapOn: 'Prev'
- assertVisible:
    id: "pageNumber8"
- assertVisible: 'Page 9 / 10 '
- tapOn: 'Start'
- assertVisible:
    id: "pageNumber0"
- assertVisible: 'Page 1 / 10 '
- tapOn: 'Prev'
- assertVisible:
    id: "pageNumber0"
- assertVisible: 'Page 1 / 10 '
