appId: com.pagerviewexample
#  tc106 [Like] buttons on page 2 are clickable
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/android/tc99_nest_pagerView_example.yaml
- swipe:
    start: "75%,74%"
    end: "13%,67%"
    duration: 272
- assertVisible: "There has two Nest PagerView with horizontal and vertical."
- tapOn:
    text: "\U0001f44d Like"
    index: 0
- assertVisible: "8 likes"
- tapOn:
    text: "\U0001f44d Like"
    index: 1
- assertVisible: "8 likes"