appId: com.pagerviewexample
#  tc122 All the links placed in the navigation bar are active
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/android/tc120_TabBarIconExample.yaml
- tapOn:
    text: "CONTACTS"
    index: 1
- tapOn:
    text: "ARTICLE"
    index: 1
- tapOn:
    text: "CHAT"
    index: 1
- tapOn:
    text: "CHAT"
    index: 1