appId: com.pagerviewexample
#  tc125 The CustomIndicatorExample tab is accessible
---
- launchApp
- assertVisible: "PagerView Example"
- swipe:
    start: "85%,83%"
    end: "72%,44%"
    duration: 258
- tapOn: "CustomIndicatorExample"