appId: com.pagerviewexample
# tc16 The active [Like] button is on each page 
---
- launchApp
- assertVisible: "PagerView Example"
- tapOn: "Basic Example"
- assertVisible: "Basic Example"
- assertVisible: "Page 1 / 10 "
- assertVisible: "7 likes"
- tapOn: "👍 Like"
- assertVisible: "8 likes"
- tapOn: "Next"
- assertVisible: "Page 2 / 10 "
- assertVisible: "👍 Like"
- assertVisible: "7 likes"
- tapOn: "👍 Like"
- repeat:
    times: 9
    commands:
      - tapOn: "👍 Like"
- assertVisible: "17 likes"
- tapOn: "Last"
- assertVisible: "7 likes"
- tapOn: "👍 Like"
- repeat:
    times: 25
    commands:
      - tapOn: "👍 Like"
- assertVisible: "33 likes"
- tapOn: "Prev"
- assertVisible: "7 likes"
- tapOn: "👍 Like"
- assertVisible: "8 likes"
- repeat:
    times: 79
    commands:
      - tapOn: "👍 Like"
- assertVisible: "87 likes"