appId: com.pagerviewexample
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/android/tc25_pager_keyboard_example.yaml
# - tapOn:
    # point: "92%,89%"
- tapOn: "GO TO NEXT QUESTION"
- assertVisible: "Second Question"
- assertVisible: "Why Pager View?"
- assertVisible: "Page 2 / 2 "
- tapOn:
    point: "50%,62%"
- inputText: "It is the best."
- tapOn:
    point: "92%,89%"
- assertVisible: "It is the best."
- tapOn: "GO TO PREVIOUS QUESTION"
- assertVisible: "GO TO NEXT QUESTION"
- assertVisible: "Page 1 / 2 "