appId: com.pagerviewexample
# tc58 Page alert dialog informs about selected page accordingly eg. “Hey You are on 1 page”
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/android/alert dialog dismissal_pager_OnPageSelected_example.yaml
- tapOn: "Next"
- assertVisible: You are on 2 page
- tapOn:
    id: android:id/button1
- tapOn: Last
- assertVisible:
    id: android:id/message
- tapOn: "OK"
- assertNotVisible: You are on 10 page
- tapOn: "Prev"
- assertVisible: You are on 9 page
- tapOn:
    id: android:id/button1
- tapOn: Start
- assertVisible: You are on 1 page
- tapOn:
    id: android:id/button1
- repeat:
    times: 9
    commands: 
      - tapOn: Add new page
    # while:
      # true: ${"Page 1 / 19 "}
    # commands:
      # - tapOn: Add new page ... this loop doesn't work
- tapOn: Last
- assertVisible: You are on 19 page
- tapOn:
    id: android:id/button1
- tapOn: Remove last page
- assertVisible: "You are on 18 page"