appId: com.pagerviewexample
#  tc83 A picture can be swiped horizontally as many times as Page numeration -1 shows
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/android/tc78_scrollable_pagerView_example.yaml
- repeat:
    times: 7
    commands:
      - tapOn: "Remove last page"
- assertTrue: ${"Page 1 / 3 "}
- swipe:
    start: "74%,31%"
    end: "32%,31%"
    duration: 400
- swipe:
    start: "91%,36%"
    end: "29%,39%"
    duration: 434
- assertTrue: ${"Page 3 / 3 "}