appId: com.pagerviewexample
#  tc88 The [Add new page] button enables the user to add any number of pages one by one - equally vertically and horizontally 
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/android/tc80_scrollable_pagerView_example.yaml
- tapOn: "Add new page"
- assertVisible: "Page 1 / 11 "
- repeat:
    times: 75
    commands:
      - tapOn: "Add new page"
- assertVisible: "Page 1 / 86 "
- tapOn: "Last"
- assertVisible: "Page 86 / 86 "
- repeat:
    times: 85
    commands:
      - swipe:
          start: "70%,45%"
          end: "17%,45%"
          duration: 336