appId: com.pagerviewexample
#  tc94 When picture is scrolled {swiped}horizontally with the [Next]/[Prev] buttons, then the Page numeration is changed
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/android/tc78_scrollable_pagerView_example.yaml
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 2 / 10 "
    timeout: 50000
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 3 / 10 "
    timeout: 30000
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 4 / 10 "
    timeout: 30000
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 5 / 10 "
    timeout: 30000
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 6 / 10 "
    timeout: 30000
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 7 / 10 "
    timeout: 30000
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 8 / 10 "
    timeout: 30000
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 9 / 10 "
    timeout: 30000
- tapOn: "Next"
- extendedWaitUntil:
    visible: "Page 10 / 10 "
    timeout: 30000
- repeat: 
    times: 6
    commands: 
      - tapOn: "Prev"
- assertVisible: "Page 4 / 10 "
- tapOn: "Prev"
- assertVisible: "Page 3 / 10 "