appId: ${APP_ID}
#  tc130 Each time the link on the Bottom navigation bar is tapped a different content is displayed
---
- runFlow: tc128_CustomTabBarExample.yaml
- tapOn: 'Albums Albums'
- assertNotVisible: '7766398169'
- tapOn: 'Chat Chat'
- assertVisible: 'make me a sandwich'
- tapOn: 'Article Article'
- assertVisible: 'Lorem Ipsum'
- tapOn: 'Contacts Contacts'
- assertVisible: 'Miles Ferguson'
