appId: ${APP_ID}
# tc131 Users can type in their messages at the CHAT page, but sending functionality is not implemented
---
- runFlow: tc128_CustomTabBarExample.yaml
- tapOn: 'Chat Chat'
- tapOn:
    point: '50%,91%'
- inputText: 'Muffin danish chocolate souffle pastry icing bonbon oat cake.'
